地図を追加して、見栄えを良くした。

--- a/css/app.css
+++ b/css/app.css
@@ -33,3 +33,12 @@ html,body {
 .ol-touch .gps {
     top: 80px;
 }
+
+.home {
+    top: 95px;
+    left: .5em;
+}
+
+.ol-touch .home {
+    top: 110px;
+}
