--- a/css/app.css
+++ b/css/app.css
@@ -23,7 +23,8 @@ html,body {
 }
 
 .mainview {
-    height:calc(100% - 50px);
+    height: 100%;
+    /*height:calc(100% - 50px);*/
     position: relative;
 }
 
@@ -77,4 +78,43 @@ html,body {
     max-width:300px;
     max-height:300px;
     vertical-align: middle;/*IE7*/
+}
+
+.slick-box {
+    position: absolute;
+    bottom: .5em;
+    left: calc(50% - 100px);
+    width: 200px;
+}
+
+.slick-item {
+    position: relative;
+    text-align: center;
+    width: 60px;
+    height: 60px;
+}
+
+.slick-item img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    z-index: 0;
+}
+
+.slick-item div {
+    position: absolute;
+    right: .5em;
+    bottom: .5em;
+    left: .5em;
+    margin: auto;
+    z-index: 1;
+    color: white;
+    background-color: rgba(32,32,32,0.5);
+}
+
+.ol-attribution {
+    bottom: calc(70px + .5em);
 }
