--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,8 @@
-@import url('//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css');
-@import url('//code.jquery.com/ui/1.11.2/themes/cupertino/jquery-ui.min.css');
+@import url('bootstrap.min.css');
+/*@import url('jquery-ui.min.css');*/
 @import url('ol.css');
+@import url('slick.css');
+@import url('font-awesome.min.css');
 
 html,body {
     height:100%;
