Improve the position of opacity slider by css.

--- a/css/app.css
+++ b/css/app.css
@@ -96,6 +96,11 @@ html,body {
     height: 10px;
 }
 
+.opacity-slider input {
+    margin-top: 10px;
+    height: 15px;
+}
+
 .slick-box {
     position: absolute;
     bottom: .5em;
