Finish setting window coding

--- a/editor/css/theme.css
+++ b/editor/css/theme.css
@@ -1,6 +1,6 @@
 @import url('../common/css/bootstrap.min.css');
 @import url('non-responsive.css');
-@import url('../common/css/bootstrap-theme.min.css');
+@import url('bootstrap-theme.min.css');
 @import url('../common/css/ol.css');
 
 html {
@@ -11,6 +11,11 @@ body {
   padding-top: 70px;
   padding-bottom: 30px;
   height: 100%;
+}
+
+body.settings {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .container {
