--- a/editor/css/theme.css
+++ b/editor/css/theme.css
@@ -3,6 +3,7 @@
 @import url('bootstrap-theme.min.css');
 @import url('../common/css/ol.css');
 @import url('ol3-contextmenu.min.css');
+@import url('ol3-geocoder.min.css');
 
 html {
   height: 100vh;
