--- a/css/bootstrap.less
+++ b/css/bootstrap.less
@@ -4,6 +4,40 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity .15s linear;
+  -o-transition: opacity .15s linear;
+  transition: opacity .15s linear;
+}
+.fade.in {
+  opacity: 1;
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000;
+}
+.modal-backdrop.fade {
+  filter: alpha(opacity=0);
+  opacity: 0;
+}
+.modal-backdrop.in {
+  filter: alpha(opacity=50);
+  opacity: .5;
+}
+.modal-open {
+  overflow: hidden;
+}
+.modal-open .maplat .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 .maplat {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -3650,15 +3684,6 @@
   input[type="button"].btn-block {
     width: 100%;
   }
-  .fade {
-    opacity: 0;
-    -webkit-transition: opacity .15s linear;
-    -o-transition: opacity .15s linear;
-    transition: opacity .15s linear;
-  }
-  .fade.in {
-    opacity: 1;
-  }
   .collapse {
     display: none;
   }
@@ -6085,9 +6110,6 @@
     background: transparent;
     border: 0;
   }
-  .modal-open {
-    overflow: hidden;
-  }
   .modal {
     position: fixed;
     top: 0;
@@ -6115,10 +6137,6 @@
     -o-transform: translate(0, 0);
     transform: translate(0, 0);
   }
-  .modal-open .modal {
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
   .modal-dialog {
     position: relative;
     width: auto;
@@ -6135,23 +6153,6 @@
     outline: 0;
     -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
     box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
-  }
-  .modal-backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1040;
-    background-color: #000;
-  }
-  .modal-backdrop.fade {
-    filter: alpha(opacity=0);
-    opacity: 0;
-  }
-  .modal-backdrop.in {
-    filter: alpha(opacity=50);
-    opacity: .5;
   }
   .modal-header {
     padding: 15px;
