modal、パーシャルなバックドロップ実現

--- a/css/bootstrap.less
+++ b/css/bootstrap.less
@@ -14,7 +14,7 @@
   opacity: 1;
 }
 .modal-backdrop {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -33,7 +33,7 @@
 .modal-open {
   overflow: hidden;
 }
-.modal-open .maplat .modal {
+.modal-open.maplat .modal {
   overflow-x: hidden;
   overflow-y: auto;
 }
