地図タイトルのモバイルでの表示崩れ修正

--- a/css/app.less
+++ b/css/app.less
@@ -106,7 +106,7 @@
             left: 50px;
         }
 
-        .ol-touch .map-title {
+        &.ol-touch .map-title {
             width: calc(100% - 130px);
             left: 65px;
         }
