[i]ボタンでアトリビューションを表示するように変更

--- a/less/app.less
+++ b/less/app.less
@@ -243,7 +243,8 @@
         }
     }
 
-    .ol-attribution {
+    .ol-copyright {
+        right: .5em;
         bottom: calc(65px + .5em);
     }
 
@@ -253,7 +254,7 @@
     }
 
     @media screen and (display-mode: standalone) and (width: 375px) and (height: 768px), screen and (display-mode: standalone) and (width: 724px) and (height: 375px), screen and (display-mode: fullscreen) and (width: 375px) and (height: 768px), screen and (display-mode: fullscreen) and (width: 724px) and (height: 375px) {
-        .ol-attribution {
+        .ol-copyright {
             bottom: calc(.5em + 86px);
         }
 
