--- a/mobile_android/app/src/main/res/layout/activity_main.xml
+++ b/mobile_android/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,6 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_below="@+id/button6"
-        android:text="地図ID"
+        android:text="表示地図情報"
         android:textSize="10dp"/>
 </RelativeLayout>
