操作中のコントロール消去をopacity制御からdisplay:none;へ

--- a/less/ui.less
+++ b/less/ui.less
@@ -541,7 +541,11 @@
     }
 
     .ol-control.fade {
-        opacity: 0;
+        display: none;
+    }
+
+    &.with-opacity .ol-slidercommon.fade {
+        display: none;
     }
 
     .ol-control.disable button,
