POIがない時はPOIボタンを表示しない

--- a/less/ui.less
+++ b/less/ui.less
@@ -548,6 +548,10 @@
         display: none;
     }
 
+    &.no_poi .ol-hide-marker {
+        display: none;
+    }
+
     .ol-control.disable button,
     &.show-border .ol-control.ol-border button,
     &.hide-marker .ol-control.ol-hide-marker button {
