画像埋め込み型に変更中

--- a/less/ui.less
+++ b/less/ui.less
@@ -1,4 +1,4 @@
-@import url('../node_modules/@maplat/core/less/core.less');
+@import (less) url('../node_modules/@maplat/core/dist/maplat_core.css');
 @import url('bootstrap.less');
 @import url('swiper.less');
 @import url('font-awesome.less');
