--- a/less/ui.less
+++ b/less/ui.less
@@ -1,10 +1,10 @@
 @import (less) url('../node_modules/@maplat/core/dist/maplat_core.css');
 @import url('bootstrap.less');
-@import url('swiper.less');
 @import url('iziToast.less');
 
 .maplat {
-    @import url('font-face.less');
-    @import url('font-awesome.less');
-    @import url('maplat-specific.less');
+  @import (less) url('../node_modules/swiper/css/swiper.css');
+  @import url('font-face.less');
+  @import url('font-awesome.less');
+  @import url('maplat-specific.less');
 }
