--- a/less/ui_packed.less
+++ b/less/ui_packed.less
@@ -1,9 +1,9 @@
 @import (less) url('../node_modules/@maplat/core/dist/maplat_core.css');
 @import url('bootstrap.less');
-@import url('swiper.less');
 @import url('iziToast.less');
 
 .maplat {
+  @import (less) url('../node_modules/swiper/css/swiper.css');
   @import url('font-face_packed.less');
   @import url('font-awesome.less');
   @import url('maplat-specific.less');
