Update some bugs: * Remove unneed debug log * Remove unneed scroll bar for POI-web * Add display:table for POI-data * Use appOption.icon setting for pointer["default.png"]

--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -162,8 +162,8 @@ input[type="checkbox"].markerlist:checked + label.check > div {
   padding-bottom: 60vh;
 }
 
-.poi_web {
-  overflow-y: scroll;
+.poi_data {
+  display: table;
 }
 
 .iframe_poi {
