.poi_data => display: inline-block, width: 100%

--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -152,18 +152,13 @@ input[type="checkbox"].markerlist:checked + label.check > div {
   left: 44px;
 }
 
-@media screen and (max-width: 640px) {
-  .poi_img img {
-    max-width: 300px;
-  }
-}
-
 .embed-responsive-60vh {
   padding-bottom: 60vh;
 }
 
 .poi_data {
-  display: table;
+  display: inline-block;
+  width: 100%;
 }
 
 .iframe_poi {
