Update several POIs context menu

--- a/less/ui_packed.less
+++ b/less/ui_packed.less
@@ -7,4 +7,5 @@
   @import url('font-face_packed.less');
   @import url('font-awesome.less');
   @import url('maplat-specific.less');
+  @import (less) url('../node_modules/ol-contextmenu/dist/ol-contextmenu.css');
 }
