Map selection context menu

--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -1,5 +1,6 @@
 .ol-ctx-menu-container li {
-  background-size:contain;
+  background-size: auto 20px;
+  background-position: top 0px left 0px;
 }
 
 .modal_load_title {
