--- a/less/ui.less
+++ b/less/ui.less
@@ -1,4 +1,4 @@
-@import (less) url('../node_modules/@maplat/core/dist/assets/maplat_core.css');
+@import url('../node_modules/@maplat/core/dist/assets/maplat_core.css');
 
 .maplat {
   @import url('bootstrap.less');
@@ -8,4 +8,5 @@
   @import url('font-awesome.less');
   @import url('maplat-specific.less');
   @import (less) url('../node_modules/ol-contextmenu/dist/ol-contextmenu.css');
+  @import (less) url('../src/ol-contextmenu/main.css');
 }
