Contextmenu 改造 ボタンの字の色が黒になってしまった

--- a/less/ui.less
+++ b/less/ui.less
@@ -7,6 +7,5 @@
   @import url('font-face.less');
   @import url('font-awesome.less');
   @import url('maplat-specific.less');
-  @import (less) url('../node_modules/ol-contextmenu/dist/ol-contextmenu.css');
-  @import (less) url('../src/ol-contextmenu/main.css');
+  @import (less) url('contextmenu.css');
 }
