--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -594,6 +594,7 @@ input[type="checkbox"].markerlist:checked + label.check > div {
 .ol-control button {
   height: 2.0625em;
   width: 2.0625em;
+  color: rgba(255, 255, 255);
   background-color: rgba(120, 5, 8, .5);
 }
 
