--- a/pwa/templates/template.html
+++ b/pwa/templates/template.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
   <meta content="yes" name="apple-mobile-web-app-capable">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/maplat.css">
   <style>
     .mainview {
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
+      position: absolute;
+      top: 0px;
+      bottom: 0px;
+      left: 0px;
+      right: 0px;
     }
   </style>
   <meta property="og:image" content="{{splash}}">
@@ -27,12 +29,13 @@
   <meta property="og:description" content="{{description}}">
   <meta name="keywords" content="{{title}},古地図,絵地図,散歩,街歩き,観光,歴史">
 </head>
+
 <body>
   <div class="mainview">
     <div id="map_div"></div>
   </div>
 </body>
-<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
+<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 <script src="assets/maplat.js"></script>
 <script>
   var ip;
@@ -54,17 +57,19 @@
     hash = hashes[i].split('=');
     option[hash[0]] = hash[1] == 'true' ? true : hash[1] == 'false' ? false : hash[1];
   }
-  Maplat.createObject(option).then(function(app){
-    app.addEventListener('clickMarker', function(evt) {
+  Maplat.createObject(option).then(function (app) {
+    app.addEventListener('clickMarker', function (evt) {
       console.log(evt);
     });
   });
 </script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-104602009-1', 'auto');
   ga('send', 'pageview', {
@@ -73,4 +78,5 @@
     'dimension3': ip
   });
 </script>
+
 </html>
