--- a/less/ui_packed.less
+++ b/less/ui_packed.less
@@ -3,7 +3,7 @@
 .maplat {
   @import url('bootstrap.less');
   @import url('iziToast.less');
-  @import (less) url('../node_modules/swiper4/dist/css/swiper.css');
+  @import (less) url('./swiper4.css');
   @import url('font-face_packed.less');
   @import url('font-awesome.less');
   @import url('maplat-specific.less');
