Update font (Not css)

--- a/less/font-awesome.less
+++ b/less/font-awesome.less
@@ -19,13 +19,14 @@
 .fa-chevron-left:before{content:"\f053"}
 .fa-chevron-right:before{content:"\f054"}
 .fa-home:before{content:"\f015"}
-.fa-crosshairs:before{content:"\f05b"}
+.fa-crosshairs:before{content:"\f601"}
 .fa-compass:before{content:"\f14e"}
-.fa-share-alt-square:before{content:"\f1e1"}
-.fa-clone:before{content:"\f24d"}
+.fa-share-alt-square:before{content:"\f14d"}
+.fa-clone:before{content:"\f5fd"}
 .fa-question-circle:before{content:"\f059"}
 .fa-info-circle:before{content:"\f05a"}
-.fa-map-marker:before{content:"\f041"}
+.fa-map-marker:before{content:"\f276"}
 .fa-clipboard:before{content:"\f0ea"}
-.fa-twitter:before{content:"\f099"}
+.fa-twitter:before{content:"\e61b"}
 .fa-facebook:before{content:"\f09a"}
+.fa-list:before{content:"\f03a"}
