--- a/less/font-face.less
+++ b/less/font-face.less
@@ -4,7 +4,7 @@
 }
 
 @font-face{
-  font-family:'FontAwesome';
+  font-family:'Font Awesome 6 Free';
   src: url('../fonts/fontawesome-webfont.woff') format('woff');
   font-weight:normal;
   font-style:normal
