--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -522,31 +522,49 @@ input[type="checkbox"].markerlist:checked + label.check > div {
   bottom: calc(115px + .5em + env(safe-area-inset-bottom));
 }
 
-.ol-border, .ol-hide-marker {
+.ol-border, .ol-hide-marker, .ol-marker-list {
   right: .5em;
   right: calc(.5em + constant(safe-area-inset-right));
   right: calc(.5em + env(safe-area-inset-right));
   bottom: calc(105px + .5em);
 }
 
-&.ol-touch .ol-border, &.ol-touch .ol-hide-marker {
+&.ol-touch .ol-border, &.ol-touch .ol-hide-marker, &.ol-touch .ol-marker-list {
   bottom: calc(115px + .5em);
   bottom: calc(115px + .5em + constant(safe-area-inset-bottom));
   bottom: calc(115px + .5em + env(safe-area-inset-bottom));
 }
 
-&.enable_border .ol-hide-marker {
+&.enable_border .ol-hide-marker, &.enable_border .ol-marker-list, &.enable_hide_marker .ol-marker-list {
   right: .5em;
   right: calc(.5em + constant(safe-area-inset-right));
   right: calc(.5em + env(safe-area-inset-right));
   bottom: calc(145px + .5em);
 }
 
-&.enable_border.ol-touch .ol-hide-marker {
+&.enable_border.ol-touch .ol-hide-marker, &.enable_border.ol-touch .ol-marker-list, &.enable_hide_marker.ol-touch .ol-marker-list {
   bottom: calc(165px + .5em);
   bottom: calc(165px + .5em + constant(safe-area-inset-bottom));
   bottom: calc(165px + .5em + env(safe-area-inset-bottom));
 }
+
+&.enable_border.enable_hide_marker .ol-marker-list {
+  right: .5em;
+  right: calc(.5em + constant(safe-area-inset-right));
+  right: calc(.5em + env(safe-area-inset-right));
+  bottom: calc(185px + .5em);
+}
+
+&.enable_border.enable_hide_marker.ol-touch .ol-marker-list {
+  bottom: calc(215px + .5em);
+  bottom: calc(215px + .5em + constant(safe-area-inset-bottom));
+  bottom: calc(215px + .5em + env(safe-area-inset-bottom));
+}
+
+
+
+
+
 
 .ol-copyright {
   right: .5em;
