--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -1,6 +1,9 @@
 .ol-ctx-menu-container li {
   background-size: auto 20px;
   background-position: top 0px left 0px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .ol-ctx-menu-container li:not(.ol-ctx-menu-separator).selected {
