--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -104,6 +104,14 @@
   vertical-align: middle; /*IE7*/
 }
 
+.list_poiitems_div {
+  display: none;
+}
+
+.list_poiitems_div.open {
+  display: block;
+}
+
 img.markerlist {
   max-width: 100%;
   max-height: 100%;
