Update new poi showing logic

--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -105,10 +105,24 @@
 }
 
 .list_poiitems_div {
+  padding-inline-start: 15px;
   display: none;
 }
 
 .list_poiitems_div.open {
+  display: block;
+}
+
+.list-group-item.layer:hover, .list-group-item.poi:hover {
+  background-color: #ccc;
+}
+
+.list_poicontent_div {
+  padding-inline-start: 0px;
+  display: none;
+}
+
+.list_poicontent_div.open {
   display: block;
 }
 
