--- a/pwa/templates/template.html
+++ b/pwa/templates/template.html
@@ -43,6 +43,7 @@
     overlay: true,
     enableHideMarker: true,
     enableBorder: true,
+    enableMarkerList: true,
     enableCache: true,
     stateUrl: true,
     enableShare: true,
