--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -44,21 +44,21 @@ li:has(+ .open) .dli-chevron {
 
 .modal_poi_content, .modal_map_content, .modal_load_content, .modal_gpsW_content, .modal_gpsD_content,
 .modal_help_content, .modal_title, .modal_load_title, .modal_gpsW_title, .modal_help_title,
-.modal_share_content, .modal_share_title, .modal_hide_marker_content, .modal_hide_marker_title {
+.modal_share_content, .modal_share_title, .modal_marker_list_content, .modal_marker_list_title {
   display: none;
 }
 
 .modal_poi .modal_poi_content, .modal_map .modal_map_content,
 .modal_load .modal_load_content, .modal_help .modal_help_content,
 .modal_gpsW .modal_gpsW_content, .modal_gpsD .modal_gpsD_content,
-.modal_share .modal_share_content, .modal_hide_marker .modal_hide_marker_content {
+.modal_share .modal_share_content, .modal_marker_list .modal_marker_list_content {
   display: block;
 }
 
 .modal_poi .modal_title, .modal_map .modal_title,
 .modal_gpsD .modal_title, .modal_help .modal_help_title,
 .modal_load .modal_load_title, .modal_gpsW .modal_gpsW_title,
-.modal_share .modal_share_title, .modal_hide_marker .modal_hide_marker_title {
+.modal_share .modal_share_title, .modal_marker_list .modal_marker_list_title {
   display: inline;
 }
 
